[MODFISTO-513] - Use correct error code for conflict exception (#442)
* [MODFISTO-513] - Use correct error code for conflict exception

* [MODFISTO-513] - Used similar logic in other methods